welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:6: error: '(' expected but identifier found.
		if getY() == 0{
                   ^ZigZag:24: error: illegal start of simple expression
}}
^